appId: xyz.blueskyweb.app
---
- runScript:
    file: ../setupServer.js
    env:
      SERVER_PATH: ?users&follows&posts&feeds
- runFlow:
    file: ../setupApp.yml
- tapOn:
    id: 'e2eSignInAlice'

- extendedWaitUntil:
    visible:
      text: 'Feeds ✨'
- tapOn:
    label: 'Can go to feeds page using feeds button in tab bar'
    text: 'Feeds ✨'
- assertVisible: 'Discover New Feeds'

- tapOn:
    label: 'Feeds button disappears after pinning a feed'
    id: 'bottomBarProfileBtn'
- tapOn:
    id: 'profilePager-selector-5'
- tapOn: 'alice-favs'
- tapOn: 'Pin to Home'
- tapOn:
    id: 'bottomBarHomeBtn'
- tapOn:
    id: 'bottomBarHomeBtn'
- tapOn:
    id: 'bottomBarHomeBtn'
- assertNotVisible: 'Feeds ✨'

- tapOn:
    label: 'Can like posts'
    id: 'likeBtn'
- tapOn:
    id: 'likeBtn'

- tapOn:
    label: 'Can quote posts'
    id: 'highlightBtn'
- tapOn:
    id: 'quoteBtn'
- inputText: 'Quoted from home screen'
- tapOn:
    id: 'composerPublishBtn'

- tapOn:
    label: 'Can delete posts'
    id: 'postDropdownBtn'
    childOf:
      id: 'feedItem-by-alice.test'
- tapOn: 'Delete post'
- tapOn: 'Delete'
