appId: xyz.blueskyweb.app
---
- runScript:
    file: ../setupServer.js
    env:
      SERVER_PATH: '?users&follows&thread'
- runFlow:
    file: ../setupApp.yml
- tapOn:
    id: 'e2eSignInAlice'

# Navigate to thread
- extendedWaitUntil:
    visible: 'Thread root'
- tapOn: 'Thread root'
- assertVisible: 'Thread reply'

# Can like the root post
- tapOn:
    id: 'likeBtn'
    childOf:
      id: 'postThreadItem-by-bob.test'
- assertVisible: '1 like'
- tapOn:
    id: 'likeBtn'
    childOf:
      id: 'postThreadItem-by-bob.test'
- assertNotVisible: '1 like'

# Can like a reply post
- tapOn:
    id: 'likeBtn'
    childOf:
      id: 'postThreadItem-by-carla.test'
- tapOn:
    id: 'likeBtn'
    childOf:
      id: 'postThreadItem-by-carla.test'
# Can quote the root post
- tapOn:
    id: 'highlightBtn'
    childOf:
      id: 'postThreadItem-by-bob.test'
- tapOn:
    id: 'quoteBtn'
- inputText: 'Quoting the root post'
- tapOn:
    id: 'composerPublishBtn'
- assertVisible:
    id: 'quoteCount-expanded'

# Can quote a reply post
- tapOn:
    id: 'highlightBtn'
    childOf:
      id: 'postThreadItem-by-carla.test'
- tapOn:
    id: 'quoteBtn'
- inputText: 'Quoting the reply post'
- tapOn:
    id: 'composerPublishBtn'
- assertVisible:
    id: 'quoteCount'
    childOf:
      id: 'postThreadItem-by-carla.test'
